--- a/RateMovementVisualizer/MainWindow.xaml
+++ b/RateMovementVisualizer/MainWindow.xaml
@@ -1,19 +1,28 @@
-﻿<Window x:Class="RateMovementVisualizer.MainWindow"
+﻿<Window x:Class="Internovus.Wpf.Training.RateMovementVisualizer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:RateMovementVisualizer"
+        xmlns:local="clr-namespace:Internovus.Wpf.Training.RateMovementVisualizer"
         xmlns:telerik="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Charting"
-        xmlns:telerikCharting="Telerik.Windows.Controls.Charting;assembly=Telerik.Windows.Controls.Charting"
-        xmlns:vm="clr-namespace:RateMovementVisualizer.ViewModels"
+        xmlns:telerikCharting="clr-namespace:Telerik.Windows.Controls.Charting;assembly=Telerik.Windows.Controls.Charting"
+        xmlns:vm="clr-namespace:Internovus.Wpf.Training.RateMovementVisualizer.ViewModels"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Grid.DataContext>
-            <vm:RateMovementViewModel></vm:RateMovementViewModel>
-        </Grid.DataContext>
-        <telerik:RadChart x:Name="Chart" ItemsSource="{Binding Rates}">
+        <telerik:RadChart x:Name="Chart" ItemsSource="{Binding RatePoints}">
+            <telerik:RadChart.SeriesMappings>
+                <telerikCharting:SeriesMapping LegendLabel="Rates">
+                    <telerikCharting:SeriesMapping.SeriesDefinition>
+                        <telerikCharting:SplineSeriesDefinition>
+                        </telerikCharting:SplineSeriesDefinition>
+                    </telerikCharting:SeriesMapping.SeriesDefinition>
+                    <telerikCharting:SeriesMapping.ItemMappings>
+                        <telerikCharting:ItemMapping DataPointMember="XValue" FieldName="Time"></telerikCharting:ItemMapping>
+                        <telerikCharting:ItemMapping DataPointMember="YValue" FieldName="Rate"></telerikCharting:ItemMapping>
+                    </telerikCharting:SeriesMapping.ItemMappings>
+                </telerikCharting:SeriesMapping>
+            </telerik:RadChart.SeriesMappings>
         </telerik:RadChart>
     </Grid>
 </Window>
