--- a/RateMovementVisualizer/MainWindow.xaml
+++ b/RateMovementVisualizer/MainWindow.xaml
@@ -3,45 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Internovus.Wpf.Training.RateMovementVisualizer"
-        xmlns:telerik="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Charting"
-        xmlns:telerikCharting="clr-namespace:Telerik.Windows.Controls.Charting;assembly=Telerik.Windows.Controls.Charting"
-        xmlns:vm="clr-namespace:Internovus.Wpf.Training.RateMovementVisualizer.ViewModels"
+        xmlns:local="clr-namespace:Internovus.Wpf.Training.RateMovementVisualizer.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="1000">
+        Title="Rate Movement Visualizer" Height="600" Width="1000">
     <Grid>
-        <telerik:RadChart x:Name="Chart" ItemsSource="{Binding RatePoints}">
-            <telerik:RadChart.DefaultView>
-                <telerikCharting:ChartDefaultView>
-                    <telerikCharting:ChartDefaultView.ChartLegend>
-                        <telerikCharting:ChartLegend Visibility="Collapsed" />
-                    </telerikCharting:ChartDefaultView.ChartLegend>
-                    <telerikCharting:ChartDefaultView.ChartArea>
-                        <telerikCharting:ChartArea EnableAnimations="False">
-                            <telerikCharting:ChartArea.AxisY>
-                                <telerikCharting:AxisY AutoRange="False" MinValue="{Binding AxisYMinValue}" MaxValue="{Binding AxisYMaxValue}">
-                                </telerikCharting:AxisY>
-                            </telerikCharting:ChartArea.AxisY>
-                            <telerikCharting:ChartArea.AxisX>
-                                <telerikCharting:AxisX AutoRange="False" MinValue="0" MaxValue="{Binding AxisXMaxValue}" Step="{Binding AxisXStep}">
-                                </telerikCharting:AxisX>
-                            </telerikCharting:ChartArea.AxisX>
-                        </telerikCharting:ChartArea>
-                    </telerikCharting:ChartDefaultView.ChartArea>
-                </telerikCharting:ChartDefaultView>
-            </telerik:RadChart.DefaultView>
-            <telerik:RadChart.SeriesMappings>
-                <telerikCharting:SeriesMapping>
-                    <telerikCharting:SeriesMapping.SeriesDefinition>
-                        <telerikCharting:SplineSeriesDefinition>
-                        </telerikCharting:SplineSeriesDefinition>
-                    </telerikCharting:SeriesMapping.SeriesDefinition>
-                    <telerikCharting:SeriesMapping.ItemMappings>
-                        <telerikCharting:ItemMapping DataPointMember="XValue" FieldName="TimeInMilliseconds"></telerikCharting:ItemMapping>
-                        <telerikCharting:ItemMapping DataPointMember="YValue" FieldName="Rate"></telerikCharting:ItemMapping>
-                    </telerikCharting:SeriesMapping.ItemMappings>
-                </telerikCharting:SeriesMapping>
-            </telerik:RadChart.SeriesMappings>
-        </telerik:RadChart>
+        <local:RateMovementView></local:RateMovementView>
     </Grid>
 </Window>
