--- a/OfflineTrading.App/Shell.xaml
+++ b/OfflineTrading.App/Shell.xaml
@@ -4,9 +4,43 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Internovus.Wpf.Training.OfflineTrading.App"
+        xmlns:prism="http://www.codeplex.com/prism"
         mc:Ignorable="d"
         Title="Shell">
+
     <Grid>
-        <TextBlock Text="Test"></TextBlock>
+        <Grid.Resources>
+            <Style x:Key="GridBorder">
+                <Setter Property="Control.BorderBrush" Value="Black"></Setter>
+                <Setter Property="Control.BorderThickness" Value="1"></Setter>
+            </Style>
+        </Grid.Resources>
+        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.2*"></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.2*"></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition Height="0.4*"></RowDefinition>
+        </Grid.RowDefinitions>
+
+        <Border Style="{StaticResource GridBorder}" Grid.Column="0" Grid.RowSpan="3">
+            <ContentControl x:Name="SelectionRegion" prism:RegionManager.RegionName="SelectionRegion"></ContentControl>
+        </Border>
+        <Border Style="{StaticResource GridBorder}" Grid.Column="1" Grid.Row="0">
+            <ContentControl x:Name="ControlsRegion" prism:RegionManager.RegionName="ControlsRegion"></ContentControl>
+        </Border>
+        <Border Style="{StaticResource GridBorder}" Grid.Column="1" Grid.Row="1">
+            <ContentControl x:Name="TabsRegion" prism:RegionManager.RegionName="TabsRegion"></ContentControl>
+        </Border>
+        <Border Style="{StaticResource GridBorder}" Grid.Column="1" Grid.Row="2">
+            <ContentControl x:Name="PortfolioRegion" prism:RegionManager.RegionName="PortfolioRegion"></ContentControl>
+        </Border>
     </Grid>
+
 </Window>
+
+    
