--- a/RateMovementVisualizer/Views/RateMovementView.xaml
+++ b/RateMovementVisualizer/Views/RateMovementView.xaml
@@ -33,8 +33,8 @@
             <telerik:RadChart.SeriesMappings>
                 <telerikCharting:SeriesMapping>
                     <telerikCharting:SeriesMapping.SeriesDefinition>
-                        <telerikCharting:SplineSeriesDefinition ShowItemLabels="False">
-                        </telerikCharting:SplineSeriesDefinition>
+                        <telerikCharting:LineSeriesDefinition ShowItemLabels="False">
+                        </telerikCharting:LineSeriesDefinition>
                     </telerikCharting:SeriesMapping.SeriesDefinition>
                     <telerikCharting:SeriesMapping.ItemMappings>
                         <telerikCharting:ItemMapping DataPointMember="XValue" FieldName="TimeInMilliseconds"></telerikCharting:ItemMapping>
