Added configuration interfaces and renamed the configuration classes

--- a/OfflineTrading.SelectionModule/Views/SelectionView.xaml
+++ b/OfflineTrading.SelectionModule/Views/SelectionView.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Grid.Resources>
             <DataTemplate x:Key="ListBoxItemTemplate">
-                <CheckBox Content="{Binding Symbol.Name}"
+                <CheckBox Content="{Binding SymbolConfiguration.Name}"
                           IsChecked="{Binding IsSelected}">
                 </CheckBox>
             </DataTemplate>
