--- a/OfflineTrading.TradingModule/Views/UserAmountView.xaml
+++ b/OfflineTrading.TradingModule/Views/UserAmountView.xaml
@@ -1,10 +1,13 @@
-﻿<UserControl x:Class="Internovus.Wpf.Training.OfflineTrading.SymbolsModule.Views.CloseAllView"
+﻿<UserControl x:Class="Internovus.Wpf.Training.OfflineTrading.TradingModule.Views.UserAmountView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Internovus.Wpf.Training.OfflineTrading.SymbolsModule.Views"
+             xmlns:local="clr-namespace:Internovus.Wpf.Training.OfflineTrading.TradingModule.Views"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Button Content="Close All" Command="{Binding CloseAllCommand}" />
+    <StackPanel Orientation="Horizontal">
+        <Label Content="Current Amount:"/>
+        <TextBlock Text="{Binding CurrentAmount}"/>
+    </StackPanel>
 </UserControl>
