Moved the RateMovementView to different assembly

--- a/OfflineTrading.SymbolsModule/Views/TabsView.xaml
+++ b/OfflineTrading.SymbolsModule/Views/TabsView.xaml
@@ -5,7 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Internovus.Wpf.Training.OfflineTrading.SymbolsModule.Views"
              xmlns:converters="clr-namespace:System.Windows.Controls;assembly=PresentationFramework"
+             xmlns:vm="clr-namespace:Internovus.Wpf.Training.OfflineTrading.Common.Charting;assembly=OfflineTrading.Common.Charting"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:prism="http://www.codeplex.com/prism"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
@@ -15,7 +17,7 @@
             </ResourceDictionary>
         </Grid.Resources>
 
-        <TabControl ItemsSource="{Binding SymbolViewModels}" SelectedItem="{Binding SlectedSymbolViewModel}">
+        <TabControl ItemsSource="{Binding SymbolViewModels}" SelectedItem="{Binding SelectedSymbolViewModel}">
             <TabControl.ItemContainerStyle>
                 <Style TargetType="TabItem">
                     <Setter Property="Visibility" Value="{Binding IsVisible, Converter={StaticResource BooleanToVisibilityConverter}}" />
@@ -32,7 +34,7 @@
             <TabControl.ContentTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding SymbolConfiguration.Name}"
-                               Visibility="{Binding IsVisible, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                               Visibility="{Binding IsVisible, Converter={StaticResource BooleanToVisibilityConverter}}"></TextBlock>
                 </DataTemplate>
             </TabControl.ContentTemplate>
         </TabControl>
