--- a/OfflineTrading.Common.Charting/RateMovementView.xaml
+++ b/OfflineTrading.Common.Charting/RateMovementView.xaml
@@ -1,12 +1,11 @@
-﻿<UserControl x:Class="Internovus.Wpf.Training.RateMovementVisualizer.Views.RateMovementView"
+﻿<UserControl x:Class="Internovus.Wpf.Training.OfflineTrading.Common.Charting.RateMovementView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Internovus.Wpf.Training.RateMovementVisualizer.Views"
+             xmlns:local="clr-namespace:Internovus.Wpf.Training.OfflineTrading.Common.Charting"
              xmlns:telerik="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Charting"
              xmlns:telerikCharting="clr-namespace:Telerik.Windows.Controls.Charting;assembly=Telerik.Windows.Controls.Charting"
-             xmlns:vm="clr-namespace:Internovus.Wpf.Training.RateMovementVisualizer.ViewModels"             
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
