--- a/OfflineTrading.SymbolsModule/Views/SelectionView.xaml
+++ b/OfflineTrading.SymbolsModule/Views/SelectionView.xaml
@@ -18,7 +18,7 @@
         <ListBox Grid.Column="0" 
                  ItemsSource="{Binding SymbolViewModels}"
                  ItemTemplate="{StaticResource ListBoxItemTemplate}"
-                 SelectedItem="{Binding SlectedSymbolViewModel}"
+                 SelectedItem="{Binding SelectedSymbolViewModel}"
                  SelectionMode="Single">
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
