--- a/RateMovementVisualizer/App.xaml
+++ b/RateMovementVisualizer/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="Internovus.Wpf.Training.RateMovementVisualizer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Internovus.Wpf.Training.RateMovementVisualizer"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Internovus.Wpf.Training.RateMovementVisualizer">
     <Application.Resources>
          
     </Application.Resources>
