--- a/RateMovementVisualizer/MainWindow.xaml
+++ b/RateMovementVisualizer/MainWindow.xaml
@@ -4,9 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Internovus.Wpf.Training.RateMovementVisualizer"
+        xmlns:localCharts="clr-namespace:Internovus.Wpf.Training.OfflineTrading.Common.Charting;assembly=OfflineTrading.Common.Charting"
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="1000">
     <Grid x:Name="MainGrid">
-        
     </Grid>
 </Window>
