--- a/OfflineTrading.SymbolsModule/Views/SelectionView.xaml
+++ b/OfflineTrading.SymbolsModule/Views/SelectionView.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Grid.Resources>
             <DataTemplate x:Key="ListBoxItemTemplate">
-                <CheckBox Content="{Binding SymbolConfiguration.Name}"
+                <CheckBox Content="{Binding SymbolName}"
                           IsChecked="{Binding IsVisible}">
                 </CheckBox>
             </DataTemplate>
