--- a/OfflineTrading.TradingModule/Views/OpenPositionView.xaml
+++ b/OfflineTrading.TradingModule/Views/OpenPositionView.xaml
@@ -1,17 +1,16 @@
-﻿<UserControl x:Class="Internovus.Wpf.Training.OfflineTrading.TradingModule.Views.OpenClosePositionView"
+﻿<UserControl x:Class="Internovus.Wpf.Training.OfflineTrading.TradingModule.Views.OpenPositionView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Internovus.Wpf.Training.OfflineTrading.SymbolsModule.Views"
+             xmlns:local="clr-namespace:Internovus.Wpf.Training.OfflineTrading.TradingModule.Views"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <StackPanel Width="200">
+        <StackPanel>
             <Label Content="Amount to buy:"></Label>
-            <TextBox></TextBox>
-            <Button Content="Buy" Command="{Binding SelectedSymbolViewModel.OpenPosition}"></Button>
-            <Button Content="Sell" Command="{Binding SelectedSymbolViewModel.ClosePosition}"></Button>
+            <TextBox Text="{Binding Amount}"></TextBox>
+            <Button Content="Buy" Command="{Binding OpenPosition}" IsEnabled="{Binding CanOpenPosition}"></Button>
         </StackPanel>
     </Grid>
 </UserControl>
