--- a/OfflineTrading.TradingModule/Views/ClosePositionView.xaml
+++ b/OfflineTrading.TradingModule/Views/ClosePositionView.xaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <Button Content="Sell" Command="{Binding ClosePosition}"></Button>
+        <Button Content="Sell" Command="{Binding ClosePosition}" IsEnabled="{Binding CanClosePosition}"></Button>
     </Grid>
 </UserControl>
