--- a/OfflineTrading.TradingModule/Views/UserAmountView.xaml
+++ b/OfflineTrading.TradingModule/Views/UserAmountView.xaml
@@ -8,6 +8,6 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <StackPanel Orientation="Horizontal">
         <Label Content="Current Amount:" />
-        <TextBlock Text="{Binding CurrentAmount}" Margin="0,5,0,0"/>
+        <TextBlock Text="{Binding UserInfo.CurrentAmount}" Margin="0,5,0,0"/>
     </StackPanel>
 </UserControl>
