Implemented correct opening and closing of positions. The user is able to open a position only if a tab is opened and amount greater than zero is added.

--- a/OfflineTrading.TradingModule/Views/OpenPositionView.xaml
+++ b/OfflineTrading.TradingModule/Views/OpenPositionView.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <StackPanel>
             <Label Content="Amount to buy:"></Label>
-            <TextBox Text="{Binding Amount}"></TextBox>
+            <TextBox Text="{Binding Amount, UpdateSourceTrigger=PropertyChanged}"></TextBox>
             <Button Content="Buy" Command="{Binding OpenPosition}" IsEnabled="{Binding CanOpenPosition}"></Button>
         </StackPanel>
     </Grid>
