--- a/OfflineTrading.TradingModule/Views/OpenedPositionsView.xaml
+++ b/OfflineTrading.TradingModule/Views/OpenedPositionsView.xaml
@@ -14,7 +14,7 @@
             <telerik:GridViewDataColumn DataMemberBinding="{Binding SymbolName}" Header="Item"/>
             <telerik:GridViewDataColumn DataMemberBinding="{Binding Amount}" Header="Amount"/>
             <telerik:GridViewDataColumn DataMemberBinding="{Binding CurrentTime}" Header="Time opened"/>
-            <telerik:GridViewDataColumn DataMemberBinding="{Binding Profit}" Header="Profit"/>
+            <telerik:GridViewDataColumn DataMemberBinding="{Binding Profit, StringFormat=N}" Header="Profit"/>
         </telerik:RadGridView.Columns>
     </telerik:RadGridView>
 </UserControl>
