--- a/OfflineTrading.TradingModule/Views/CurrentPositionsView.xaml
+++ b/OfflineTrading.TradingModule/Views/CurrentPositionsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Internovus.Wpf.Training.OfflineTrading.TradingModule.Views.OpenedPositionsView"
+﻿<UserControl x:Class="Internovus.Wpf.Training.OfflineTrading.TradingModule.Views.CurrentPositionsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,7 +8,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
 
-    <telerik:RadGridView ItemsSource="{Binding OpenedPositions}" SelectedItem="{Binding SelectedPositionItem}" AutoGenerateColumns="False">
+    <telerik:RadGridView ItemsSource="{Binding CurrentPositions}" SelectedItem="{Binding SelectedPositionItem}" AutoGenerateColumns="False">
         <telerik:RadGridView.Columns>
             <telerik:GridViewDataColumn DataMemberBinding="{Binding Id}" Header="Id"/>
             <telerik:GridViewDataColumn DataMemberBinding="{Binding SymbolName}" Header="Item"/>
